// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`given generateCSS function > when generating with colorTransition enabled > then matches the snapshot with @property blocks and transition declaration 1`] = `
"@property --maz-surface {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(1 0 0);
}
@property --maz-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.2573 0.0068 248.09);
}
@property --maz-primary {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.6495 0.1913 253.63);
}
@property --maz-primary-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(1 0 0);
}
@property --maz-secondary {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.555 0.288 299.35);
}
@property --maz-secondary-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(1 0 0);
}
@property --maz-accent {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.7595 0.1492 168.15);
}
@property --maz-accent-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(1 0 0);
}
@property --maz-success {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.7851 0.1845 126.83);
}
@property --maz-success-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.2573 0.0068 248.09);
}
@property --maz-warning {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.8256 0.1583 79.4);
}
@property --maz-warning-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.2573 0.0068 248.09);
}
@property --maz-destructive {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.637 0.237 25.33);
}
@property --maz-destructive-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(1 0 0);
}
@property --maz-info {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.6619 0.1115 211.75);
}
@property --maz-info-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(1 0 0);
}
@property --maz-contrast {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.2524 0.0212 280.69);
}
@property --maz-contrast-foreground {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.9619 0 0);
}
@property --maz-divider {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.9276 0.0058 264.53);
}
@property --maz-overlay {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.5103 0 0);
}
@property --maz-muted {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.6324 0 0);
}
@property --maz-shadow {
  syntax: '<color>';
  inherits: true;
  initial-value: oklch(0.2103 0.0059 285.88);
}
@layer theme {
  :root {
    color-scheme: light dark;
    --maz-base-font-size: 14px;
    --maz-font-family: Manrope, sans-serif, system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, oxygen, ubuntu, cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    --maz-font-mono-stack: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
    --maz-font-display-stack: Manrope, sans-serif, system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, oxygen, ubuntu, cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    --maz-border-width: 1px;
    --maz-motion-fast: 100ms;
    --maz-motion-normal: 200ms;
    --maz-motion-slow: 300ms;
    --maz-easing-out: cubic-bezier(0.4, 0, 0.2, 1);
    --maz-easing-in: cubic-bezier(0.4, 0, 1, 1);
    --maz-easing-in-out: cubic-bezier(0.4, 0, 0.2, 1);
    --maz-disabled-opacity: 0.5;
    --maz-disabled-cursor: not-allowed;
    --maz-space: 0.25rem;
    --maz-rounded-xs: calc(var(--maz-rounded-md) * 0.25);
    --maz-rounded-sm: calc(var(--maz-rounded-md) * 0.5);
    --maz-rounded-md: 0.7rem;
    --maz-rounded-lg: calc(var(--maz-rounded-md) * 1.5);
    --maz-rounded-xl: calc(var(--maz-rounded-md) * 2);
    --maz-rounded-2xl: calc(var(--maz-rounded-md) * 3);
    --maz-rounded-3xl: calc(var(--maz-rounded-md) * 4);
    --maz-shadow-style-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
    --maz-shadow-style-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
    --maz-shadow-style-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
    --maz-shadow-style-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
    --maz-shadow-style-elevation: 0 4px 12px -2px rgb(0 0 0 / 0.08), 0 2px 4px -1px rgb(0 0 0 / 0.06);
    --maz-btn-font-weight: 500;
    --maz-container-bg: light-dark(var(--maz-surface), var(--maz-surface));
    --maz-input-bg: light-dark(var(--maz-surface), var(--maz-surface-400));
    --maz-input-top-label-font-weight: 600;
    --maz-surface: light-dark(oklch(1 0 0), oklch(0.2524 0.0212 280.69));
    --maz-foreground: light-dark(oklch(0.2573 0.0068 248.09), oklch(0.8845 0 0));
    --maz-primary: light-dark(oklch(0.6495 0.1913 253.63), oklch(0.6495 0.1913 253.63));
    --maz-primary-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-secondary: light-dark(oklch(0.555 0.288 299.35), oklch(0.555 0.288 299.35));
    --maz-secondary-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-accent: light-dark(oklch(0.7595 0.1492 168.15), oklch(0.7595 0.1492 168.15));
    --maz-accent-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-success: light-dark(oklch(0.7851 0.1845 126.83), oklch(0.7851 0.1845 126.83));
    --maz-success-foreground: light-dark(oklch(0.2573 0.0068 248.09), oklch(0.2573 0.0068 248.09));
    --maz-warning: light-dark(oklch(0.8256 0.1583 79.4), oklch(0.8256 0.1583 79.4));
    --maz-warning-foreground: light-dark(oklch(0.2573 0.0068 248.09), oklch(0.2573 0.0068 248.09));
    --maz-destructive: light-dark(oklch(0.637 0.237 25.33), oklch(0.7149 0.1784 23.64));
    --maz-destructive-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-info: light-dark(oklch(0.6619 0.1115 211.75), oklch(0.6619 0.1115 211.75));
    --maz-info-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-contrast: light-dark(oklch(0.2524 0.0212 280.69), oklch(1 0 0));
    --maz-contrast-foreground: light-dark(oklch(0.9619 0 0), oklch(0.2573 0.0068 248.09));
    --maz-divider: light-dark(oklch(0.9276 0.0058 264.53), oklch(0.3399 0.0366 282.73));
    --maz-overlay: light-dark(oklch(0.5103 0 0), oklch(0.2697 0 0));
    --maz-muted: light-dark(oklch(0.6324 0 0), oklch(0.6324 0 0));
    --maz-shadow: light-dark(oklch(0.2103 0.0059 285.88), oklch(0.2741 0.0055 286.03));
    --maz-primary-50: color-mix(in oklch, var(--maz-primary), white 95%);
    --maz-primary-100: color-mix(in oklch, var(--maz-primary), white 85%);
    --maz-primary-200: color-mix(in oklch, var(--maz-primary), white 70%);
    --maz-primary-300: color-mix(in oklch, var(--maz-primary), white 50%);
    --maz-primary-400: color-mix(in oklch, var(--maz-primary), white 25%);
    --maz-primary-500: var(--maz-primary);
    --maz-primary-600: color-mix(in oklch, var(--maz-primary), black 15%);
    --maz-primary-700: color-mix(in oklch, var(--maz-primary), black 30%);
    --maz-primary-800: color-mix(in oklch, var(--maz-primary), black 45%);
    --maz-primary-900: color-mix(in oklch, var(--maz-primary), black 60%);
    --maz-primary-950: color-mix(in oklch, var(--maz-primary), black 75%);
    --maz-secondary-50: color-mix(in oklch, var(--maz-secondary), white 95%);
    --maz-secondary-100: color-mix(in oklch, var(--maz-secondary), white 85%);
    --maz-secondary-200: color-mix(in oklch, var(--maz-secondary), white 70%);
    --maz-secondary-300: color-mix(in oklch, var(--maz-secondary), white 50%);
    --maz-secondary-400: color-mix(in oklch, var(--maz-secondary), white 25%);
    --maz-secondary-500: var(--maz-secondary);
    --maz-secondary-600: color-mix(in oklch, var(--maz-secondary), black 15%);
    --maz-secondary-700: color-mix(in oklch, var(--maz-secondary), black 30%);
    --maz-secondary-800: color-mix(in oklch, var(--maz-secondary), black 45%);
    --maz-secondary-900: color-mix(in oklch, var(--maz-secondary), black 60%);
    --maz-secondary-950: color-mix(in oklch, var(--maz-secondary), black 75%);
    --maz-accent-50: color-mix(in oklch, var(--maz-accent), white 95%);
    --maz-accent-100: color-mix(in oklch, var(--maz-accent), white 85%);
    --maz-accent-200: color-mix(in oklch, var(--maz-accent), white 70%);
    --maz-accent-300: color-mix(in oklch, var(--maz-accent), white 50%);
    --maz-accent-400: color-mix(in oklch, var(--maz-accent), white 25%);
    --maz-accent-500: var(--maz-accent);
    --maz-accent-600: color-mix(in oklch, var(--maz-accent), black 15%);
    --maz-accent-700: color-mix(in oklch, var(--maz-accent), black 30%);
    --maz-accent-800: color-mix(in oklch, var(--maz-accent), black 45%);
    --maz-accent-900: color-mix(in oklch, var(--maz-accent), black 60%);
    --maz-accent-950: color-mix(in oklch, var(--maz-accent), black 75%);
    --maz-destructive-50: color-mix(in oklch, var(--maz-destructive), white 95%);
    --maz-destructive-100: color-mix(in oklch, var(--maz-destructive), white 85%);
    --maz-destructive-200: color-mix(in oklch, var(--maz-destructive), white 70%);
    --maz-destructive-300: color-mix(in oklch, var(--maz-destructive), white 50%);
    --maz-destructive-400: color-mix(in oklch, var(--maz-destructive), white 25%);
    --maz-destructive-500: var(--maz-destructive);
    --maz-destructive-600: color-mix(in oklch, var(--maz-destructive), black 15%);
    --maz-destructive-700: color-mix(in oklch, var(--maz-destructive), black 30%);
    --maz-destructive-800: color-mix(in oklch, var(--maz-destructive), black 45%);
    --maz-destructive-900: color-mix(in oklch, var(--maz-destructive), black 60%);
    --maz-destructive-950: color-mix(in oklch, var(--maz-destructive), black 75%);
    --maz-success-50: color-mix(in oklch, var(--maz-success), white 95%);
    --maz-success-100: color-mix(in oklch, var(--maz-success), white 85%);
    --maz-success-200: color-mix(in oklch, var(--maz-success), white 70%);
    --maz-success-300: color-mix(in oklch, var(--maz-success), white 50%);
    --maz-success-400: color-mix(in oklch, var(--maz-success), white 25%);
    --maz-success-500: var(--maz-success);
    --maz-success-600: color-mix(in oklch, var(--maz-success), black 15%);
    --maz-success-700: color-mix(in oklch, var(--maz-success), black 30%);
    --maz-success-800: color-mix(in oklch, var(--maz-success), black 45%);
    --maz-success-900: color-mix(in oklch, var(--maz-success), black 60%);
    --maz-success-950: color-mix(in oklch, var(--maz-success), black 75%);
    --maz-warning-50: color-mix(in oklch, var(--maz-warning), white 95%);
    --maz-warning-100: color-mix(in oklch, var(--maz-warning), white 85%);
    --maz-warning-200: color-mix(in oklch, var(--maz-warning), white 70%);
    --maz-warning-300: color-mix(in oklch, var(--maz-warning), white 50%);
    --maz-warning-400: color-mix(in oklch, var(--maz-warning), white 25%);
    --maz-warning-500: var(--maz-warning);
    --maz-warning-600: color-mix(in oklch, var(--maz-warning), black 15%);
    --maz-warning-700: color-mix(in oklch, var(--maz-warning), black 30%);
    --maz-warning-800: color-mix(in oklch, var(--maz-warning), black 45%);
    --maz-warning-900: color-mix(in oklch, var(--maz-warning), black 60%);
    --maz-warning-950: color-mix(in oklch, var(--maz-warning), black 75%);
    --maz-info-50: color-mix(in oklch, var(--maz-info), white 95%);
    --maz-info-100: color-mix(in oklch, var(--maz-info), white 85%);
    --maz-info-200: color-mix(in oklch, var(--maz-info), white 70%);
    --maz-info-300: color-mix(in oklch, var(--maz-info), white 50%);
    --maz-info-400: color-mix(in oklch, var(--maz-info), white 25%);
    --maz-info-500: var(--maz-info);
    --maz-info-600: color-mix(in oklch, var(--maz-info), black 15%);
    --maz-info-700: color-mix(in oklch, var(--maz-info), black 30%);
    --maz-info-800: color-mix(in oklch, var(--maz-info), black 45%);
    --maz-info-900: color-mix(in oklch, var(--maz-info), black 60%);
    --maz-info-950: color-mix(in oklch, var(--maz-info), black 75%);
    --maz-contrast-50: color-mix(in oklch, var(--maz-contrast), white 95%);
    --maz-contrast-100: color-mix(in oklch, var(--maz-contrast), white 85%);
    --maz-contrast-200: color-mix(in oklch, var(--maz-contrast), white 70%);
    --maz-contrast-300: color-mix(in oklch, var(--maz-contrast), white 50%);
    --maz-contrast-400: color-mix(in oklch, var(--maz-contrast), white 25%);
    --maz-contrast-500: var(--maz-contrast);
    --maz-contrast-600: color-mix(in oklch, var(--maz-contrast), black 15%);
    --maz-contrast-700: color-mix(in oklch, var(--maz-contrast), black 30%);
    --maz-contrast-800: color-mix(in oklch, var(--maz-contrast), black 45%);
    --maz-contrast-900: color-mix(in oklch, var(--maz-contrast), black 60%);
    --maz-contrast-950: color-mix(in oklch, var(--maz-contrast), black 75%);
    --maz-surface-50: color-mix(in oklch, var(--maz-surface), white 95%);
    --maz-surface-100: color-mix(in oklch, var(--maz-surface), white 85%);
    --maz-surface-200: color-mix(in oklch, var(--maz-surface), white 70%);
    --maz-surface-300: color-mix(in oklch, var(--maz-surface), white 50%);
    --maz-surface-400: color-mix(in oklch, var(--maz-surface), white 25%);
    --maz-surface-500: var(--maz-surface);
    --maz-surface-600: color-mix(in oklch, var(--maz-surface), black 15%);
    --maz-surface-700: color-mix(in oklch, var(--maz-surface), black 30%);
    --maz-surface-800: color-mix(in oklch, var(--maz-surface), black 45%);
    --maz-surface-900: color-mix(in oklch, var(--maz-surface), black 60%);
    --maz-surface-950: color-mix(in oklch, var(--maz-surface), black 75%);
    --maz-foreground-50: color-mix(in oklch, var(--maz-foreground), white 95%);
    --maz-foreground-100: color-mix(in oklch, var(--maz-foreground), white 85%);
    --maz-foreground-200: color-mix(in oklch, var(--maz-foreground), white 70%);
    --maz-foreground-300: color-mix(in oklch, var(--maz-foreground), white 50%);
    --maz-foreground-400: color-mix(in oklch, var(--maz-foreground), white 25%);
    --maz-foreground-500: var(--maz-foreground);
    --maz-foreground-600: color-mix(in oklch, var(--maz-foreground), black 15%);
    --maz-foreground-700: color-mix(in oklch, var(--maz-foreground), black 30%);
    --maz-foreground-800: color-mix(in oklch, var(--maz-foreground), black 45%);
    --maz-foreground-900: color-mix(in oklch, var(--maz-foreground), black 60%);
    --maz-foreground-950: color-mix(in oklch, var(--maz-foreground), black 75%);
    --maz-divider-50: color-mix(in oklch, var(--maz-divider), white 95%);
    --maz-divider-100: color-mix(in oklch, var(--maz-divider), white 85%);
    --maz-divider-200: color-mix(in oklch, var(--maz-divider), white 70%);
    --maz-divider-300: color-mix(in oklch, var(--maz-divider), white 50%);
    --maz-divider-400: color-mix(in oklch, var(--maz-divider), white 25%);
    --maz-divider-500: var(--maz-divider);
    --maz-divider-600: color-mix(in oklch, var(--maz-divider), black 15%);
    --maz-divider-700: color-mix(in oklch, var(--maz-divider), black 30%);
    --maz-divider-800: color-mix(in oklch, var(--maz-divider), black 45%);
    --maz-divider-900: color-mix(in oklch, var(--maz-divider), black 60%);
    --maz-divider-950: color-mix(in oklch, var(--maz-divider), black 75%);
    --maz-muted-50: color-mix(in oklch, var(--maz-muted), white 95%);
    --maz-muted-100: color-mix(in oklch, var(--maz-muted), white 85%);
    --maz-muted-200: color-mix(in oklch, var(--maz-muted), white 70%);
    --maz-muted-300: color-mix(in oklch, var(--maz-muted), white 50%);
    --maz-muted-400: color-mix(in oklch, var(--maz-muted), white 25%);
    --maz-muted-500: var(--maz-muted);
    --maz-muted-600: color-mix(in oklch, var(--maz-muted), black 15%);
    --maz-muted-700: color-mix(in oklch, var(--maz-muted), black 30%);
    --maz-muted-800: color-mix(in oklch, var(--maz-muted), black 45%);
    --maz-muted-900: color-mix(in oklch, var(--maz-muted), black 60%);
    --maz-muted-950: color-mix(in oklch, var(--maz-muted), black 75%);
    --maz-overlay-50: color-mix(in oklch, var(--maz-overlay), white 95%);
    --maz-overlay-100: color-mix(in oklch, var(--maz-overlay), white 85%);
    --maz-overlay-200: color-mix(in oklch, var(--maz-overlay), white 70%);
    --maz-overlay-300: color-mix(in oklch, var(--maz-overlay), white 50%);
    --maz-overlay-400: color-mix(in oklch, var(--maz-overlay), white 25%);
    --maz-overlay-500: var(--maz-overlay);
    --maz-overlay-600: color-mix(in oklch, var(--maz-overlay), black 15%);
    --maz-overlay-700: color-mix(in oklch, var(--maz-overlay), black 30%);
    --maz-overlay-800: color-mix(in oklch, var(--maz-overlay), black 45%);
    --maz-overlay-900: color-mix(in oklch, var(--maz-overlay), black 60%);
    --maz-overlay-950: color-mix(in oklch, var(--maz-overlay), black 75%);
    --maz-shadow-50: color-mix(in oklch, var(--maz-shadow), white 95%);
    --maz-shadow-100: color-mix(in oklch, var(--maz-shadow), white 85%);
    --maz-shadow-200: color-mix(in oklch, var(--maz-shadow), white 70%);
    --maz-shadow-300: color-mix(in oklch, var(--maz-shadow), white 50%);
    --maz-shadow-400: color-mix(in oklch, var(--maz-shadow), white 25%);
    --maz-shadow-500: var(--maz-shadow);
    --maz-shadow-600: color-mix(in oklch, var(--maz-shadow), black 15%);
    --maz-shadow-700: color-mix(in oklch, var(--maz-shadow), black 30%);
    --maz-shadow-800: color-mix(in oklch, var(--maz-shadow), black 45%);
    --maz-shadow-900: color-mix(in oklch, var(--maz-shadow), black 60%);
    --maz-shadow-950: color-mix(in oklch, var(--maz-shadow), black 75%);
    transition: --maz-surface 200ms ease-in-out, --maz-foreground 200ms ease-in-out, --maz-primary 200ms ease-in-out, --maz-primary-foreground 200ms ease-in-out, --maz-secondary 200ms ease-in-out, --maz-secondary-foreground 200ms ease-in-out, --maz-accent 200ms ease-in-out, --maz-accent-foreground 200ms ease-in-out, --maz-success 200ms ease-in-out, --maz-success-foreground 200ms ease-in-out, --maz-warning 200ms ease-in-out, --maz-warning-foreground 200ms ease-in-out, --maz-destructive 200ms ease-in-out, --maz-destructive-foreground 200ms ease-in-out, --maz-info 200ms ease-in-out, --maz-info-foreground 200ms ease-in-out, --maz-contrast 200ms ease-in-out, --maz-contrast-foreground 200ms ease-in-out, --maz-divider 200ms ease-in-out, --maz-overlay 200ms ease-in-out, --maz-muted 200ms ease-in-out, --maz-shadow 200ms ease-in-out;
  }
  .dark { color-scheme: only dark; }
  .light { color-scheme: only light; }
}"
`;

exports[`given generateCSS function > when generating with mode=both and darkSelectorStrategy=class > then matches the snapshot 1`] = `
"@layer theme {
  :root {
    color-scheme: light dark;
    --maz-base-font-size: 14px;
    --maz-font-family: Manrope, sans-serif, system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, oxygen, ubuntu, cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    --maz-font-mono-stack: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
    --maz-font-display-stack: Manrope, sans-serif, system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, oxygen, ubuntu, cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    --maz-border-width: 1px;
    --maz-motion-fast: 100ms;
    --maz-motion-normal: 200ms;
    --maz-motion-slow: 300ms;
    --maz-easing-out: cubic-bezier(0.4, 0, 0.2, 1);
    --maz-easing-in: cubic-bezier(0.4, 0, 1, 1);
    --maz-easing-in-out: cubic-bezier(0.4, 0, 0.2, 1);
    --maz-disabled-opacity: 0.5;
    --maz-disabled-cursor: not-allowed;
    --maz-space: 0.25rem;
    --maz-rounded-xs: calc(var(--maz-rounded-md) * 0.25);
    --maz-rounded-sm: calc(var(--maz-rounded-md) * 0.5);
    --maz-rounded-md: 0.7rem;
    --maz-rounded-lg: calc(var(--maz-rounded-md) * 1.5);
    --maz-rounded-xl: calc(var(--maz-rounded-md) * 2);
    --maz-rounded-2xl: calc(var(--maz-rounded-md) * 3);
    --maz-rounded-3xl: calc(var(--maz-rounded-md) * 4);
    --maz-shadow-style-sm: 0 1px 2px 0 rgb(0 0 0 / 0.05);
    --maz-shadow-style-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
    --maz-shadow-style-lg: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
    --maz-shadow-style-xl: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
    --maz-shadow-style-elevation: 0 4px 12px -2px rgb(0 0 0 / 0.08), 0 2px 4px -1px rgb(0 0 0 / 0.06);
    --maz-btn-font-weight: 500;
    --maz-container-bg: light-dark(var(--maz-surface), var(--maz-surface));
    --maz-input-bg: light-dark(var(--maz-surface), var(--maz-surface-400));
    --maz-input-top-label-font-weight: 600;
    --maz-surface: light-dark(oklch(1 0 0), oklch(0.2524 0.0212 280.69));
    --maz-foreground: light-dark(oklch(0.2573 0.0068 248.09), oklch(0.8845 0 0));
    --maz-primary: light-dark(oklch(0.6495 0.1913 253.63), oklch(0.6495 0.1913 253.63));
    --maz-primary-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-secondary: light-dark(oklch(0.555 0.288 299.35), oklch(0.555 0.288 299.35));
    --maz-secondary-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-accent: light-dark(oklch(0.7595 0.1492 168.15), oklch(0.7595 0.1492 168.15));
    --maz-accent-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-success: light-dark(oklch(0.7851 0.1845 126.83), oklch(0.7851 0.1845 126.83));
    --maz-success-foreground: light-dark(oklch(0.2573 0.0068 248.09), oklch(0.2573 0.0068 248.09));
    --maz-warning: light-dark(oklch(0.8256 0.1583 79.4), oklch(0.8256 0.1583 79.4));
    --maz-warning-foreground: light-dark(oklch(0.2573 0.0068 248.09), oklch(0.2573 0.0068 248.09));
    --maz-destructive: light-dark(oklch(0.637 0.237 25.33), oklch(0.7149 0.1784 23.64));
    --maz-destructive-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-info: light-dark(oklch(0.6619 0.1115 211.75), oklch(0.6619 0.1115 211.75));
    --maz-info-foreground: light-dark(oklch(1 0 0), oklch(1 0 0));
    --maz-contrast: light-dark(oklch(0.2524 0.0212 280.69), oklch(1 0 0));
    --maz-contrast-foreground: light-dark(oklch(0.9619 0 0), oklch(0.2573 0.0068 248.09));
    --maz-divider: light-dark(oklch(0.9276 0.0058 264.53), oklch(0.3399 0.0366 282.73));
    --maz-overlay: light-dark(oklch(0.5103 0 0), oklch(0.2697 0 0));
    --maz-muted: light-dark(oklch(0.6324 0 0), oklch(0.6324 0 0));
    --maz-shadow: light-dark(oklch(0.2103 0.0059 285.88), oklch(0.2741 0.0055 286.03));
    --maz-primary-50: color-mix(in oklch, var(--maz-primary), white 95%);
    --maz-primary-100: color-mix(in oklch, var(--maz-primary), white 85%);
    --maz-primary-200: color-mix(in oklch, var(--maz-primary), white 70%);
    --maz-primary-300: color-mix(in oklch, var(--maz-primary), white 50%);
    --maz-primary-400: color-mix(in oklch, var(--maz-primary), white 25%);
    --maz-primary-500: var(--maz-primary);
    --maz-primary-600: color-mix(in oklch, var(--maz-primary), black 15%);
    --maz-primary-700: color-mix(in oklch, var(--maz-primary), black 30%);
    --maz-primary-800: color-mix(in oklch, var(--maz-primary), black 45%);
    --maz-primary-900: color-mix(in oklch, var(--maz-primary), black 60%);
    --maz-primary-950: color-mix(in oklch, var(--maz-primary), black 75%);
    --maz-secondary-50: color-mix(in oklch, var(--maz-secondary), white 95%);
    --maz-secondary-100: color-mix(in oklch, var(--maz-secondary), white 85%);
    --maz-secondary-200: color-mix(in oklch, var(--maz-secondary), white 70%);
    --maz-secondary-300: color-mix(in oklch, var(--maz-secondary), white 50%);
    --maz-secondary-400: color-mix(in oklch, var(--maz-secondary), white 25%);
    --maz-secondary-500: var(--maz-secondary);
    --maz-secondary-600: color-mix(in oklch, var(--maz-secondary), black 15%);
    --maz-secondary-700: color-mix(in oklch, var(--maz-secondary), black 30%);
    --maz-secondary-800: color-mix(in oklch, var(--maz-secondary), black 45%);
    --maz-secondary-900: color-mix(in oklch, var(--maz-secondary), black 60%);
    --maz-secondary-950: color-mix(in oklch, var(--maz-secondary), black 75%);
    --maz-accent-50: color-mix(in oklch, var(--maz-accent), white 95%);
    --maz-accent-100: color-mix(in oklch, var(--maz-accent), white 85%);
    --maz-accent-200: color-mix(in oklch, var(--maz-accent), white 70%);
    --maz-accent-300: color-mix(in oklch, var(--maz-accent), white 50%);
    --maz-accent-400: color-mix(in oklch, var(--maz-accent), white 25%);
    --maz-accent-500: var(--maz-accent);
    --maz-accent-600: color-mix(in oklch, var(--maz-accent), black 15%);
    --maz-accent-700: color-mix(in oklch, var(--maz-accent), black 30%);
    --maz-accent-800: color-mix(in oklch, var(--maz-accent), black 45%);
    --maz-accent-900: color-mix(in oklch, var(--maz-accent), black 60%);
    --maz-accent-950: color-mix(in oklch, var(--maz-accent), black 75%);
    --maz-destructive-50: color-mix(in oklch, var(--maz-destructive), white 95%);
    --maz-destructive-100: color-mix(in oklch, var(--maz-destructive), white 85%);
    --maz-destructive-200: color-mix(in oklch, var(--maz-destructive), white 70%);
    --maz-destructive-300: color-mix(in oklch, var(--maz-destructive), white 50%);
    --maz-destructive-400: color-mix(in oklch, var(--maz-destructive), white 25%);
    --maz-destructive-500: var(--maz-destructive);
    --maz-destructive-600: color-mix(in oklch, var(--maz-destructive), black 15%);
    --maz-destructive-700: color-mix(in oklch, var(--maz-destructive), black 30%);
    --maz-destructive-800: color-mix(in oklch, var(--maz-destructive), black 45%);
    --maz-destructive-900: color-mix(in oklch, var(--maz-destructive), black 60%);
    --maz-destructive-950: color-mix(in oklch, var(--maz-destructive), black 75%);
    --maz-success-50: color-mix(in oklch, var(--maz-success), white 95%);
    --maz-success-100: color-mix(in oklch, var(--maz-success), white 85%);
    --maz-success-200: color-mix(in oklch, var(--maz-success), white 70%);
    --maz-success-300: color-mix(in oklch, var(--maz-success), white 50%);
    --maz-success-400: color-mix(in oklch, var(--maz-success), white 25%);
    --maz-success-500: var(--maz-success);
    --maz-success-600: color-mix(in oklch, var(--maz-success), black 15%);
    --maz-success-700: color-mix(in oklch, var(--maz-success), black 30%);
    --maz-success-800: color-mix(in oklch, var(--maz-success), black 45%);
    --maz-success-900: color-mix(in oklch, var(--maz-success), black 60%);
    --maz-success-950: color-mix(in oklch, var(--maz-success), black 75%);
    --maz-warning-50: color-mix(in oklch, var(--maz-warning), white 95%);
    --maz-warning-100: color-mix(in oklch, var(--maz-warning), white 85%);
    --maz-warning-200: color-mix(in oklch, var(--maz-warning), white 70%);
    --maz-warning-300: color-mix(in oklch, var(--maz-warning), white 50%);
    --maz-warning-400: color-mix(in oklch, var(--maz-warning), white 25%);
    --maz-warning-500: var(--maz-warning);
    --maz-warning-600: color-mix(in oklch, var(--maz-warning), black 15%);
    --maz-warning-700: color-mix(in oklch, var(--maz-warning), black 30%);
    --maz-warning-800: color-mix(in oklch, var(--maz-warning), black 45%);
    --maz-warning-900: color-mix(in oklch, var(--maz-warning), black 60%);
    --maz-warning-950: color-mix(in oklch, var(--maz-warning), black 75%);
    --maz-info-50: color-mix(in oklch, var(--maz-info), white 95%);
    --maz-info-100: color-mix(in oklch, var(--maz-info), white 85%);
    --maz-info-200: color-mix(in oklch, var(--maz-info), white 70%);
    --maz-info-300: color-mix(in oklch, var(--maz-info), white 50%);
    --maz-info-400: color-mix(in oklch, var(--maz-info), white 25%);
    --maz-info-500: var(--maz-info);
    --maz-info-600: color-mix(in oklch, var(--maz-info), black 15%);
    --maz-info-700: color-mix(in oklch, var(--maz-info), black 30%);
    --maz-info-800: color-mix(in oklch, var(--maz-info), black 45%);
    --maz-info-900: color-mix(in oklch, var(--maz-info), black 60%);
    --maz-info-950: color-mix(in oklch, var(--maz-info), black 75%);
    --maz-contrast-50: color-mix(in oklch, var(--maz-contrast), white 95%);
    --maz-contrast-100: color-mix(in oklch, var(--maz-contrast), white 85%);
    --maz-contrast-200: color-mix(in oklch, var(--maz-contrast), white 70%);
    --maz-contrast-300: color-mix(in oklch, var(--maz-contrast), white 50%);
    --maz-contrast-400: color-mix(in oklch, var(--maz-contrast), white 25%);
    --maz-contrast-500: var(--maz-contrast);
    --maz-contrast-600: color-mix(in oklch, var(--maz-contrast), black 15%);
    --maz-contrast-700: color-mix(in oklch, var(--maz-contrast), black 30%);
    --maz-contrast-800: color-mix(in oklch, var(--maz-contrast), black 45%);
    --maz-contrast-900: color-mix(in oklch, var(--maz-contrast), black 60%);
    --maz-contrast-950: color-mix(in oklch, var(--maz-contrast), black 75%);
    --maz-surface-50: color-mix(in oklch, var(--maz-surface), white 95%);
    --maz-surface-100: color-mix(in oklch, var(--maz-surface), white 85%);
    --maz-surface-200: color-mix(in oklch, var(--maz-surface), white 70%);
    --maz-surface-300: color-mix(in oklch, var(--maz-surface), white 50%);
    --maz-surface-400: color-mix(in oklch, var(--maz-surface), white 25%);
    --maz-surface-500: var(--maz-surface);
    --maz-surface-600: color-mix(in oklch, var(--maz-surface), black 15%);
    --maz-surface-700: color-mix(in oklch, var(--maz-surface), black 30%);
    --maz-surface-800: color-mix(in oklch, var(--maz-surface), black 45%);
    --maz-surface-900: color-mix(in oklch, var(--maz-surface), black 60%);
    --maz-surface-950: color-mix(in oklch, var(--maz-surface), black 75%);
    --maz-foreground-50: color-mix(in oklch, var(--maz-foreground), white 95%);
    --maz-foreground-100: color-mix(in oklch, var(--maz-foreground), white 85%);
    --maz-foreground-200: color-mix(in oklch, var(--maz-foreground), white 70%);
    --maz-foreground-300: color-mix(in oklch, var(--maz-foreground), white 50%);
    --maz-foreground-400: color-mix(in oklch, var(--maz-foreground), white 25%);
    --maz-foreground-500: var(--maz-foreground);
    --maz-foreground-600: color-mix(in oklch, var(--maz-foreground), black 15%);
    --maz-foreground-700: color-mix(in oklch, var(--maz-foreground), black 30%);
    --maz-foreground-800: color-mix(in oklch, var(--maz-foreground), black 45%);
    --maz-foreground-900: color-mix(in oklch, var(--maz-foreground), black 60%);
    --maz-foreground-950: color-mix(in oklch, var(--maz-foreground), black 75%);
    --maz-divider-50: color-mix(in oklch, var(--maz-divider), white 95%);
    --maz-divider-100: color-mix(in oklch, var(--maz-divider), white 85%);
    --maz-divider-200: color-mix(in oklch, var(--maz-divider), white 70%);
    --maz-divider-300: color-mix(in oklch, var(--maz-divider), white 50%);
    --maz-divider-400: color-mix(in oklch, var(--maz-divider), white 25%);
    --maz-divider-500: var(--maz-divider);
    --maz-divider-600: color-mix(in oklch, var(--maz-divider), black 15%);
    --maz-divider-700: color-mix(in oklch, var(--maz-divider), black 30%);
    --maz-divider-800: color-mix(in oklch, var(--maz-divider), black 45%);
    --maz-divider-900: color-mix(in oklch, var(--maz-divider), black 60%);
    --maz-divider-950: color-mix(in oklch, var(--maz-divider), black 75%);
    --maz-muted-50: color-mix(in oklch, var(--maz-muted), white 95%);
    --maz-muted-100: color-mix(in oklch, var(--maz-muted), white 85%);
    --maz-muted-200: color-mix(in oklch, var(--maz-muted), white 70%);
    --maz-muted-300: color-mix(in oklch, var(--maz-muted), white 50%);
    --maz-muted-400: color-mix(in oklch, var(--maz-muted), white 25%);
    --maz-muted-500: var(--maz-muted);
    --maz-muted-600: color-mix(in oklch, var(--maz-muted), black 15%);
    --maz-muted-700: color-mix(in oklch, var(--maz-muted), black 30%);
    --maz-muted-800: color-mix(in oklch, var(--maz-muted), black 45%);
    --maz-muted-900: color-mix(in oklch, var(--maz-muted), black 60%);
    --maz-muted-950: color-mix(in oklch, var(--maz-muted), black 75%);
    --maz-overlay-50: color-mix(in oklch, var(--maz-overlay), white 95%);
    --maz-overlay-100: color-mix(in oklch, var(--maz-overlay), white 85%);
    --maz-overlay-200: color-mix(in oklch, var(--maz-overlay), white 70%);
    --maz-overlay-300: color-mix(in oklch, var(--maz-overlay), white 50%);
    --maz-overlay-400: color-mix(in oklch, var(--maz-overlay), white 25%);
    --maz-overlay-500: var(--maz-overlay);
    --maz-overlay-600: color-mix(in oklch, var(--maz-overlay), black 15%);
    --maz-overlay-700: color-mix(in oklch, var(--maz-overlay), black 30%);
    --maz-overlay-800: color-mix(in oklch, var(--maz-overlay), black 45%);
    --maz-overlay-900: color-mix(in oklch, var(--maz-overlay), black 60%);
    --maz-overlay-950: color-mix(in oklch, var(--maz-overlay), black 75%);
    --maz-shadow-50: color-mix(in oklch, var(--maz-shadow), white 95%);
    --maz-shadow-100: color-mix(in oklch, var(--maz-shadow), white 85%);
    --maz-shadow-200: color-mix(in oklch, var(--maz-shadow), white 70%);
    --maz-shadow-300: color-mix(in oklch, var(--maz-shadow), white 50%);
    --maz-shadow-400: color-mix(in oklch, var(--maz-shadow), white 25%);
    --maz-shadow-500: var(--maz-shadow);
    --maz-shadow-600: color-mix(in oklch, var(--maz-shadow), black 15%);
    --maz-shadow-700: color-mix(in oklch, var(--maz-shadow), black 30%);
    --maz-shadow-800: color-mix(in oklch, var(--maz-shadow), black 45%);
    --maz-shadow-900: color-mix(in oklch, var(--maz-shadow), black 60%);
    --maz-shadow-950: color-mix(in oklch, var(--maz-shadow), black 75%);
  }
  .dark { color-scheme: only dark; }
  .light { color-scheme: only light; }
}"
`;
